--- a/SIH Frontend/index.html
+++ b/SIH Frontend/index.html
@@ -214,7 +214,7 @@ AI Safety & Constraints Advisor
 <textarea id="safetyPrompt" class="border rounded p-2 w-full mb-3" rows="3" placeholder="e.g., Safety tips for trekking around Betla National Park"></textarea>
 <button id="safetyGenBtn" class="bg-orange-500 hover:bg-orange-600 text-white px-4 py-2 rounded w-full">Generate Safety Guidance</button>
 <div class="mt-3 text-sm">
-<div id="safetyError" class="hidden p-2 bg-red-50 text-red-700 rounded"></div>
+<div id="safetyError" class="hidden p-2 bg-red   -50 text-red-700 rounded"></div>
 <pre id="safetyResult" class="whitespace-pre-wrap text-gray-700"></pre>
 </div>
 </div>
@@ -768,9 +768,9 @@ AI Food Recommendations
 
         <div class="mt-8">
         <button onclick="openTab('culture')" class="bg-gray-300 px-4 py-2 rounded">Back to Culture</button>
-</div>
-</div>
-</section>
+        </div>
+    </div>
+    </section>
 <!-- 1. Handmade Dokra -->
     <section id="dokra" class="tab-content max-w-7xl mx-auto p-8">
     <div class="bg-white rounded-lg shadow-lg p-8 space-y-6">
@@ -795,7 +795,7 @@ AI Food Recommendations
         <strong>Dokra</strong> is an ancient metal casting craft using the lost-wax technique. Practiced for over 4,000 years by Jharkhand’s Malhar and Dhokra Damar tribes, each figure—animals, deities, tribal motifs—is unique because the mold is destroyed after casting.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -824,7 +824,7 @@ AI Food Recommendations
         Woven by Jharkhand’s local tribes, <strong>Tribal Shawls</strong> carry vibrant patterns inspired by nature and folklore. Made from natural fibers, they are warm, durable, and carry deep cultural symbolism.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -853,7 +853,7 @@ AI Food Recommendations
         <strong>Bamboo weaving</strong> is a traditional craft of Jharkhand, creating eco-friendly baskets used for daily storage, rituals, and festivals. Lightweight yet durable, these baskets are crafted entirely by hand.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -882,7 +882,7 @@ AI Food Recommendations
         <strong>Sohrai paintings</strong> are created by tribal women on walls during the harvest festival. Using natural earth colors, the art depicts animals, fertility, and prosperity symbols, carrying centuries of tradition.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -911,7 +911,7 @@ AI Food Recommendations
         Crafted from natural wood, <strong>Jharkhand’s wooden toys</strong> are safe, eco-friendly, and painted with natural dyes. They represent animals, daily life, and local folklore, carrying cultural charm for children.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -947,7 +947,7 @@ AI Food Recommendations
         Tribal drums are the heartbeat of Jharkhand’s culture. Used in festivals, dances, and ceremonies, these drums are made with natural wood and animal hide. Their deep, resonant sound connects communities and uplifts spirits during celebrations.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -983,7 +983,7 @@ AI Food Recommendations
         Tribal necklaces of Jharkhand are made using beads, shells, brass, and natural stones. They hold cultural significance, worn during festivals and dances, symbolizing beauty, status, and spirituality.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -1018,7 +1018,7 @@ AI Food Recommendations
         Pottery is one of the oldest crafts of Jharkhand. Made with natural clay, pottery items like bowls, lamps, and vessels are both decorative and useful, reflecting the earthy lifestyle of the tribes.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -1047,7 +1047,7 @@ AI Food Recommendations
         Terracotta art is one of the oldest forms of craft in Jharkhand, often inspired by tribal life, animals, and deities. These figurines are eco-friendly, handmade, and perfect for décor or gifting.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -1076,7 +1076,7 @@ AI Food Recommendations
         Handmade jute bags are lightweight, strong, and eco-friendly alternatives to plastic. Decorated with tribal patterns, they are both practical for daily use and fashionable.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -1105,7 +1105,7 @@ AI Food Recommendations
         Tribal earrings are made using brass, beads, and silver-plated metal, reflecting the tribal culture of Jharkhand. They are lightweight, stylish, and perfect for festive occasions.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -1134,7 +1134,7 @@ AI Food Recommendations
         Stone carving is a traditional craft of Jharkhand, where artisans skillfully carve idols, panels, and decorative items from local stones. They are often used in temples and as home décor.
         </p>
         <div class="mt-8">
-        <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
+            <button onclick="openTab('marketplace')" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 transition">Back to Marketplace</button>
         </div>
     </div>
     </section>
@@ -1473,17 +1473,19 @@ Essential things pack list generator
 </div>
 </div>
 <section id="payment-page" class="tab-content fixed inset-0 z-50 bg-white p-8 overflow-auto hidden">
-<div class="max-w-md mx-auto bg-gray-100 p-6 rounded-lg shadow-lg text-center">
-<h2 class="text-2xl font-bold mb-4">Payment Gateway</h2>
-<img src="https://via.placeholder.com/300x150.png?text=UPI+QR+Code" alt="UPI QR Code" class="w-full h-40 object-contain rounded mb-4">
-<p class="mb-4 text-lg">Scan to Pay: <strong id="payment-amount"></strong></p>
-<p class="text-sm text-gray-500">
-This is a mock payment interface. Please do not enter real payment details.
-</p>
-<div class="flex justify-center gap-4 mt-6">
-<button onclick="openTab('user')" class="bg-emerald-600 text-white px-6 py-2 rounded-lg">Go to Profile</button>
-</div>
-</div>
+  <div class="max-w-md mx-auto bg-gray-100 p-6 rounded-lg shadow-lg text-center">
+    <h2 class="text-2xl font-bold mb-4">Payment Gateway</h2>
+    <img src="https://via.placeholder.com/300x150.png?text=UPI+QR+Code" alt="UPI QR Code" class="w-full h-40 object-contain rounded mb-4">
+    <p class="mb-4 text-lg">Scan to Pay: <strong id="payment-amount"></strong></p>
+    <p class="text-sm text-gray-500">
+      This is a mock payment interface. Please do not enter real payment details.
+    </p>
+    <div class="flex justify-center gap-4 mt-6">
+      <button id="place-order-btn" class="bg-emerald-600 text-white px-6 py-2 rounded-lg">Place Order</button>
+      <button id="go-back-btn" class="bg-gray-400 text-white px-6 py-2 rounded-lg">Go Back</button>
+    </div>
+    <div id="order-placed-msg" class="mt-6 text-green-700 font-semibold hidden">Order has been placed!</div>
+  </div>
 </section>
 <footer class="bg-emerald-700 text-white text-center py-4 mt-8">
 © 2025 Jharkhand Tourism Portal
@@ -1587,7 +1589,7 @@ special_interests: (document.getElementById('interests').value || '').split(',')
 comments: document.getElementById('comments').value || ''
 }
 };
-const res = await fetch(`${apiBase}/api/generate_itinerary`, {
+const res = await fetch(`${apiRoot}/api/generate_itinerary`, {
 method: 'POST',
 headers: { 'Content-Type': 'application/json' },
 body: JSON.stringify(payload)
@@ -1659,6 +1661,31 @@ if (event.target == receiptModal) {
 closeReceipt();
 }
 }
+// Payment page: Place Order and Go Back button handlers
+const placeOrderBtn = document.getElementById('place-order-btn');
+const goBackBtn = document.getElementById('go-back-btn');
+const orderPlacedMsg = document.getElementById('order-placed-msg');
+
+if (placeOrderBtn && orderPlacedMsg) {
+  placeOrderBtn.addEventListener('click', () => {
+    orderPlacedMsg.classList.remove('hidden');
+    placeOrderBtn.disabled = true;
+    goBackBtn.disabled = true;
+    setTimeout(() => {
+      orderPlacedMsg.classList.add('hidden');
+      placeOrderBtn.disabled = false;
+      goBackBtn.disabled = false;
+      openTab('marketplace');
+    }, 2000); // Show message for 2 seconds, then go back to marketplace
+  });
+}
+
+if (goBackBtn) {
+  goBackBtn.addEventListener('click', () => {
+    openTab('marketplace');
+  });
+}
+
 // Chat widget toggle
 const chatToggle = document.getElementById('chat-toggle');
 const chatBox = document.getElementById('chat-box');
@@ -1785,7 +1812,7 @@ if (weatherResult) weatherResult.textContent = '';
 btn.disabled = true; btn.textContent = 'Fetching...';
 try {
 const payload = { location, date };
-const res = await fetch(`${apiBase}/api/weather_forecast`, {
+const res = await fetch(`${apiRoot}/api/weather_forecast`, {
 method: 'POST',
 headers: { 'Content-Type': 'application/json' },
 body: JSON.stringify(payload)
@@ -1822,7 +1849,7 @@ season: packSeason ? packSeason.value : 'Mixed',
 activities: packActivities ? packActivities.value : 'Mixed',
 days: packDays ? parseInt(packDays.value || '5') : 5
 };
-const res = await fetch(`${apiBase}/api/pack_list`, {
+const res = await fetch(`${apiRoot}/api/pack_list`, {
 method: 'POST',
 headers: { 'Content-Type': 'application/json' },
 body: JSON.stringify(payload)
