--- a/SIH Frontend/index.html
+++ b/SIH Frontend/index.html
@@ -135,7 +135,7 @@ box-shadow: 0 12px 24px rgba(0,0,0,0.08);
 <div class="max-w-screen-2xl mx-auto px-4 sm:px-6 lg:px-8">
 <div class="flex items-center justify-between py-3 gap-2">
 <div class="flex items-center gap-4 shrink-0">
-<img src="images/betla.jpg" alt="emblem" class="w-10 h-10 rounded-full" />
+<img src="images/jhar360.png" alt="emblem" class="w-10 h-10 rounded-full" />
 <span class="font-bold text-xl md:text-2xl">Jharkhand 360</span>
 </div>
 <div class="flex-1 min-w-0 flex gap-3 flex-nowrap md:flex-wrap overflow-x-auto no-scrollbar items-center justify-end">
