--- a/SIH Frontend/index.html
+++ b/SIH Frontend/index.html
@@ -221,46 +221,126 @@ AI Safety & Constraints Advisor
 </div>
 <h3 class="heading-sub mb-6 section-title">Explore more places</h3>
 <div class="grid md:grid-cols-3 gap-6">
-            <button onclick="openTab('betla')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/betla.jpg" class="h-48 w-full object-cover" alt="Betla National Park">
-                <div class="p-4"><h3 class="font-bold">Betla National Park</h3><p class="text-sm text-gray-600">Wildlife safari and nature.</p></div>
-            </button>
-            <button onclick="openTab('baidyanath')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/baidyanath.jpg" class="h-48 w-full object-cover" alt="Baidyanath Temple">
-                <div class="p-4"><h3 class="font-bold">Baidyanath Temple</h3><p class="text-sm text-gray-600">Pilgrimage site in Deoghar.</p></div>
-            </button>
-            <button onclick="openTab('netarhat')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/netarhat.jpg" class="h-48 w-full object-cover" alt="Netarhat Sunrise">
-                <div class="p-4"><h3 class="font-bold">Netarhat Sunrise</h3><p class="text-sm text-gray-600">Scenic sunrise viewpoint.</p></div>
-            </button>
-            <button onclick="openTab('jonha-falls')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/Jonha Falls.jpg" class="h-48 w-full object-cover" alt="Jonha Falls">
-                <div class="p-4"><h3 class="font-bold">Jonha Falls</h3><p class="text-sm text-gray-600">Beautiful waterfalls.</p></div>
-            </button>
-            <button onclick="openTab('dassam-falls')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/dassam-falls-ranchi-jharkhand-ranchi-1-attr-hero.jpeg" class="h-48 w-full object-cover" alt="Dassam Falls">
-                <div class="p-4"><h3 class="font-bold">Dassam Falls</h3><p class="text-sm text-gray-600">Ten streams waterfall.</p></div>
-            </button>
-            <button onclick="openTab('dalma-wildlife')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/Dalma Wildlife Sanctuary.jpeg" class="h-48 w-full object-cover" alt="Dalma Wildlife Sanctuary">
-                <div class="p-4"><h3 class="font-bold">Dalma Wildlife Sanctuary</h3><p class="text-sm text-gray-600">Elephant reserve.</p></div>
-            </button>
-            <button onclick="openTab('parasnath-hill')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/Parasnath Hill.jpg" class="h-48 w-full object-cover" alt="Parasnath Hill">
-                <div class="p-4"><h3 class="font-bold">Parasnath Hill</h3><p class="text-sm text-gray-600">Jain pilgrimage site.</p></div>
-            </button>
-            <button onclick="openTab('hundru-falls')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/Hundru Falls.jpg" class="h-48 w-full object-cover" alt="Hundru Falls">
-                <div class="p-4"><h3 class="font-bold">Hundru Falls</h3><p class="text-sm text-gray-600">Scenic cascade.</p></div>
-            </button>
-            <button onclick="openTab('tagore-hill')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/Tagore Hill.jpg" class="h-48 w-full object-cover" alt="Tagore Hill">
-                <div class="p-4"><h3 class="font-bold">Tagore Hill</h3><p class="text-sm text-gray-600">Historical viewpoint.</p></div>
-            </button>
-            <button onclick="openTab('patratu-valley')" class="bg-white rounded shadow overflow-hidden text-left">
-                <img src="images/Patratu Valley.jpg" class="h-48 w-full object-cover" alt="Patratu Valley">
-                <div class="p-4"><h3 class="font-bold">Patratu Valley</h3><p class="text-sm text-gray-600">Lush green valley.</p></div>
-            </button>
+    <!-- Betla National Park -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/betla.jpg" class="h-48 w-full object-cover" alt="Betla National Park">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Betla National Park</h3>
+            <p class="text-sm text-gray-600">Wildlife safari and nature.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('betla')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+                <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Baidyanath Temple -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/baidyanath.jpg" class="h-48 w-full object-cover" alt="Baidyanath Temple">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Baidyanath Temple</h3>
+            <p class="text-sm text-gray-600">Pilgrimage site in Deoghar.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('baidyanath')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+            <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Netarhat Sunrise -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/netarhat.jpg" class="h-48 w-full object-cover" alt="Netarhat Sunrise">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Netarhat Sunrise</h3>
+            <p class="text-sm text-gray-600">Scenic sunrise viewpoint.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('netarhat')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+            <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Jonha Falls -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/Jonha Falls.jpg" class="h-48 w-full object-cover" alt="Jonha Falls">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Jonha Falls</h3>
+            <p class="text-sm text-gray-600">Beautiful waterfalls.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('jonha-falls')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+            <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Dassam Falls -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/dassam-falls-ranchi-jharkhand-ranchi-1-attr-hero.jpeg" class="h-48 w-full object-cover" alt="Dassam Falls">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Dassam Falls</h3>
+            <p class="text-sm text-gray-600">Ten streams waterfall.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('dassam-falls')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+            <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Dalma Wildlife Sanctuary -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/Dalma Wildlife Sanctuary.jpeg" class="h-48 w-full object-cover" alt="Dalma Wildlife Sanctuary">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Dalma Wildlife Sanctuary</h3>
+            <p class="text-sm text-gray-600">Elephant reserve.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('dalma-wildlife')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+            <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Parasnath Hill -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/Parasnath Hill.jpg" class="h-48 w-full object-cover" alt="Parasnath Hill">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Parasnath Hill</h3>
+            <p class="text-sm text-gray-600">Jain pilgrimage site.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('parasnath-hill')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+            <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Hundru Falls -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/Hundru Falls.jpg" class="h-48 w-full object-cover" alt="Hundru Falls">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Hundru Falls</h3>
+            <p class="text-sm text-gray-600">Scenic cascade.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('hundru-falls')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+                    <button onclick="window.location.href='hundrufallsARVR.html'" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Tagore Hill -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/Tagore Hill.jpg" class="h-48 w-full object-cover" alt="Tagore Hill">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Tagore Hill</h3>
+            <p class="text-sm text-gray-600">Historical viewpoint.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('tagore-hill')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+            <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
+    <!-- Patratu Valley -->
+    <div class="bg-white rounded shadow overflow-hidden text-left flex flex-col">
+        <img src="images/Patratu Valley.jpg" class="h-48 w-full object-cover" alt="Patratu Valley">
+        <div class="p-4 flex-1 flex flex-col">
+            <h3 class="font-bold">Patratu Valley</h3>
+            <p class="text-sm text-gray-600">Lush green valley.</p>
+            <div class="mt-3 flex gap-2">
+                <button onclick="openTab('patratu-valley')" class="bg-emerald-600 text-white px-3 py-1 rounded text-sm">Info</button>
+            <button onclick="alert('To be added soon')" class="bg-orange-500 text-white px-3 py-1 rounded text-sm">AR/VR Preview</button>
+            </div>
+        </div>
+    </div>
 </div>
 </section>
 <section id="betla" class="tab-content max-w-7xl mx-auto p-8">
@@ -1447,8 +1527,21 @@ Essential things pack list generator
         </div>
     </section>
 <section id="analytics" class="tab-content max-w-screen-xl mx-auto px-3 sm:px-4 md:px-6 py-5">
-<h2 class="heading-main mb-8 section-title">Analytics Dashboard</h2>
-<div id="analytics-root"></div>
+<h2 class="heading-main mb-8 section-title">Analytics</h2>
+<div class="bg-white rounded-lg shadow p-6 card-soft mb-8">
+    <h3 class="text-2xl font-bold mb-3 section-title">Tourism Analytics</h3>
+    <div id="analytics-root">
+        <!-- Existing analytics graphs and charts will appear here -->
+    </div>
+</div>
+<!-- Sentiment Analysis Placeholder -->
+<div class="bg-white rounded-lg shadow p-6 card-soft">
+    <h3 class="text-2xl font-bold mb-3 section-title">Sentiment Analysis</h3>
+    <p class="text-gray-700 mb-2">Analyze user feedback and reviews about destinations.</p>
+    <div class="bg-gray-50 border border-dashed border-gray-300 p-6 text-center text-gray-500 rounded">
+        <span class="text-lg">Sentiment analysis results will appear here.<br>Feature coming soon!</span>
+    </div>
+</div>
 </section>
 <section id="user" class="tab-content max-w-screen-xl mx-auto px-3 sm:px-4 md:px-6 py-5">
 <h2 class="heading-main mb-8 section-title">User Dashboard</h2>
